--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-HASURA_URL=https://production-db.lunie.io/v1/graphql
-HASURA_ADMIN_KEY=xfz4iBMCtRFdqeQqvJuu8pYJ
+VUE_APP_HASURA_URL=https://production-db.lunie.io/v1/graphql
+VUE_APP_HASURA_ADMIN_KEY=xfz4iBMCtRFdqeQqvJuu8pYJ
+VUE_APP_PATH=/
