--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "core-js": "^3.6.4",
     "node-fetch": "^2.6.0",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "dotenv": "^8.2.0",
+    "dotenv-expand": "^5.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
